mods to support TreeCmd and FolderImportCmd plus some cleanup

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -71,6 +71,7 @@ source=com.ibm.bao.ceshell.SourceCmd
 sudo=com.ibm.bao.ceshell.SudoCmd
 sudols=com.ibm.bao.ceshell.SudolsCmd
 touch=com.ibm.bao.ceshell.TouchCmd
+tree=com.ibm.bao.ceshell.TreeCmd
 use=com.ibm.bao.ceshell.UseCmd
 which=com.ibm.bao.ceshell.WhichCmd
 whoami=com.ibm.bao.ceshell.WhoAmICmd
