this i sthe commite msg

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -17,6 +17,7 @@ cancel=com.ibm.bao.ceshell.CancelCmd
 cd=com.ibm.bao.ceshell.CDCmd
 chgclass=com.ibm.bao.ceshell.ChangeClassCmd
 clls=com.ibm.bao.ceshell.ChoiceListsListCmd
+clprops=com.ibm.bao.ceshell.ChoiceListPropsCmd
 codemodupdate=com.ibm.bao.ceshell.CodeModuleUpdateCmd
 connect=com.ibm.bao.ceshell.ConnectCmd
 connectls=com.ibm.bao.ceshell.ConnectLSCmd
