added StorageAreaPropsCmd and some cleanup

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -64,6 +64,7 @@ quit=com.ibm.bao.ceshell.NoOpCommand
 rm=com.ibm.bao.ceshell.RMCmd
 save=com.ibm.bao.ceshell.SaveCmd
 sals=com.ibm.bao.ceshell.StorageAreaLsCmd
+saprops=com.ibm.bao.ceshell.StorageAreaPropsCmd
 select=com.ibm.bao.ceshell.SelectCommand
 set=com.ibm.bao.ceshell.SetCmd
 sleep=com.ibm.bao.ceshell.SleepCmd
