all file system mods

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -26,6 +26,8 @@ czdspls=com.ibm.bao.ceshell.ClassDefDefaultStoragePolicyLsCmd
 docversions=com.ibm.bao.ceshell.DocVersionsCmd
 describe=com.ibm.bao.ceshell.DescribeCmd
 docadd=com.ibm.bao.ceshell.DocAddCmdV2
+docckin=com.ibm.bao.ceshell.DocCheckinCmd
+docckout=com.ibm.bao.ceshell.DocCheckoutCmd
 doccols=com.ibm.bao.ceshell.DocCheckOutListCmd
 docdel=com.ibm.bao.ceshell.DocDelCmd
 docfolders=com.ibm.bao.ceshell.DocFoldersCmd
@@ -33,6 +35,7 @@ docimport=com.ibm.bao.ceshell.DocImportCmd
 docprops=com.ibm.bao.ceshell.DocPropsCmd
 docsecfolder=com.ibm.bao.ceshell.DocSecFolder
 doctitle=com.ibm.bao.ceshell.DocTitleCmd
+docunlock=com.ibm.bao.ceshell.DocUnlockCmd
 docview=com.ibm.bao.ceshell.DocViewCmdV2
 domprops=com.ibm.bao.ceshell.DomainPropsCmd
 edit=com.ibm.bao.ceshell.EditCmdV2
