new PE commands

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -83,6 +83,8 @@ whoami=com.ibm.bao.ceshell.WhoAmICmd
 zz=com.ibm.bao.ceshell.WhoAmICmd
 ## *************************************************************************
 ## PE Commands
+pe.asls=com.ibm.bao.ceshell.pe.ApplicationSpacesListCmd
+pe.asdef=com.ibm.bao.ceshell.pe.ApplicationSpaceDefCmd
 pe.emptyqueue=com.ibm.bao.ceshell.pe.EmptyQueueCmd
 pe.foope=com.ibm.bao.ceshell.pe.FooPeCmd
 pe.qdef=com.ibm.bao.ceshell.pe.QueueDefinitionCmd
@@ -90,6 +92,8 @@ pe.qls=com.ibm.bao.ceshell.pe.QueueLsCmd
 pe.sedisp=com.ibm.bao.ceshell.pe.StepElementDispatchCmd
 pe.seprops=com.ibm.bao.ceshell.pe.StepElemementPropsCmd
 pe.qsls=com.ibm.bao.ceshell.pe.QueuesLsCmd
+pe.rdef=com.ibm.bao.ceshell.pe.RosterDefinitionCmd
+pe.rsls=com.ibm.bao.ceshell.pe.RostersListCmd
 pe.wfexport=com.ibm.bao.ceshell.pe.WFExportCmd
 pe.wfnamesls=com.ibm.bao.ceshell.pe.WorkflowNamesLsCmd
 pe.wflaunch=com.ibm.bao.ceshell.pe.WorkflowLaunchCmd
