updates to print queue and worklist properties

--- a/src/com/ibm/bao/ceshell/util/mimetypes.properties
+++ b/src/com/ibm/bao/ceshell/util/mimetypes.properties
@@ -43,3 +43,7 @@ xltx=application/vnd.openxmlformats-officedocument.spreadsheetml.template
 svg=image/svg+xml
 xfdl=application/vnd.xfdl
 xfdd=application/vnd.xfdl.design
+
+
+# custom
+xpdl=application/x-filenet-xpdlworkflowdefinition
