--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -44,6 +44,7 @@ eqls=com.ibm.bao.ceshell.EventQueueListCmd
 esls=com.ibm.bao.ceshell.EventSubscriptionLsCmd
 evt_driver=com.ibm.bao.ceshell.test.EventHandlerTestDriver
 execscript=com.ibm.bao.ceshell.ExecScript
+find=com.ibm.bao.ceshell.FindCmd
 folderexport=com.ibm.bao.ceshell.FolderExportCmd
 folderimport=com.ibm.bao.ceshell.FolderImportCmd
 foo=com.ibm.bao.ceshell.FooCommand
