--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -47,6 +47,7 @@ execscript=com.ibm.bao.ceshell.ExecScript
 find=com.ibm.bao.ceshell.FindCmd
 folderexport=com.ibm.bao.ceshell.FolderExportCmd
 folderimport=com.ibm.bao.ceshell.FolderImportCmd
+folderprops=com.ibm.bao.ceshell.FolderPropsCmd
 foo=com.ibm.bao.ceshell.FooCommand
 help=com.ibm.bao.ceshell.HelpCmd
 history=com.ibm.bao.ceshell.HistoryCmd
