solution locks command

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -83,6 +83,8 @@ use=com.ibm.bao.ceshell.UseCmd
 which=com.ibm.bao.ceshell.WhichCmd
 whoami=com.ibm.bao.ceshell.WhoAmICmd
 zz=com.ibm.bao.ceshell.WhoAmICmd
+## case manager commands
+cm.slocks=com.ibm.bao.ceshell.cm.SolutionLockCmd
 ## *************************************************************************
 ## PE Commands
 pe.asls=com.ibm.bao.ceshell.pe.ApplicationSpacesListCmd
