case sec version 1

--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -103,6 +103,10 @@ pe.wfnamesls=com.ibm.bao.ceshell.pe.WorkflowNamesLsCmd
 pe.wflaunch=com.ibm.bao.ceshell.pe.WorkflowLaunchCmd
 pe.wflaunchprops=com.ibm.bao.ceshell.pe.WFLaunchPropsCmd
 pe.wfparams=com.ibm.bao.ceshell.pe.WFParamsCmd
+## ********************************************************************
+# UCM commands
+ucm.csec=com.ibm.ucm.ecm.ceshell.UCMCaseSecurity
+
 ## ***********************************************************************
 ## Utility command
 util.diff=com.ibm.bao.ceshell.util.DiffCmd
