--- a/resources/ceshell.cmds.properties
+++ b/resources/ceshell.cmds.properties
@@ -106,6 +106,7 @@ pe.wfparams=com.ibm.bao.ceshell.pe.WFParamsCmd
 ## ********************************************************************
 # UCM commands
 ucm.csec=com.ibm.ucm.ecm.ceshell.UCMCaseSecurity
+ucm.slocks=com.ibm.ucm.ecm.ceshell.SolutionLocksCmd
 
 ## ***********************************************************************
 ## Utility command
